=========
Changelog
=========

1.1.0a12 (unreleased)
=====================

- Allow to set the contact group of the Supervisor service check from
  the environment::

    [component:supervisor]
    check_contact_groups = group1, group2


1.1.0a11 (2015-11-24)
=====================

- Allow to set the contact group of the Supervisor service check.


1.1.0a10 (2015-11-11)
=====================

- Sort logfiles for logrotate to avoid superfluous reloading.


1.1.0a9 (2015-10-14)
====================

- Do not implicitly perform attribute conversions when applying overrides.
  Due to the behaviour of `hasattr` this shadowed conversion exceptions
  and also performed unnecessary computation or network access (e.g. DNS).


1.1.0a8 (2015-10-05)
====================

- Fix default pip arguments for installing packages. This stops rebuilds of
  python/buildout components on each run.

- Change default virtualenv download URL to https and use the current FCIO
  mirror.


1.1.0a7 (2015-09-18)
====================

- Support Git < 2.0

- Add support for managing Python 3.5 environments.

- Update virtualenv to newest version for Python 2.7+ and all
  Python 3 versions.

- Drop support for Python 3.1.

- Update supervisor: 3.0 -> 3.1.3

  Includes updated dependencies.

- Make socketpath in supervisor configurable.

- Fix broken Python compatibility tests.


1.1.0a6 (2015-09-17)
====================

- Adjust Git repositories to correctly perform fast-forward
  merges.

- Fix Mercurial repository tests that broke without noticing.

- Add end-to-end test for our new error reporting which got a
  regression (#17617)

1.1.0a5 (2015-09-09)
====================

- Fix Mercurial repositories after refactorings for Git broke it.


1.1.0a4 (2015-09-06)
====================

- Actually get pull-based Git repositories to work. Still experimental, though.


1.1.0a3 (2015-09-05)
====================

- Initial support for managing batou projects with git. Git repositories